--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <title>Lifespans</title>
   </head>
 
   <body>
-  If I write stuff here does it appear?
+    <h1>If I write stuff here does it appear?</h1>
+    <script src="app.js"></script>
   </body>
 </html>
