--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <h3>of the top 25 most famous* people on Wikipedia</h3>
       <form>
         <label>
-          Tell me who was alive in: <input type="text" value="1710 or later" id="year" onkeydown = "if (event.keyCode === 13){document.getElementById('btnSearch').click()}"/>
+          Tell me who was alive in: <input type="text" placeholder="1710 or later" id="year" onkeydown = "if (event.keyCode === 13){document.getElementById('btnSearch').click()}"/>
 
         </label>
         <input type="button" value="Submit" id="yearBtnSearch" onclick="filterYear()" />
