fixed placeholder text

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <br/>
       <form>
         <label>
-          Tell me who lived past age: <input type="text" id="age" onkeydown = "if (event.keyCode === 13){document.getElementById('ageBtnSearch').click()}"/>
+          Tell me who lived past age: <input type="text" id="age" placeholder="65" onkeydown = "if (event.keyCode === 13){document.getElementById('ageBtnSearch').click()}"/>
 
         </label>
         <input type="button" value="Submit" id="ageBtnSearch" onclick="filterAge()" />
