Cleaned up spacing

--- a/index.html
+++ b/index.html
@@ -5,86 +5,16 @@
         <title>D3 Test</title>
         <link rel="stylesheet" href="d3.css">
         <script type="text/javascript" src="d3/d3.v3.js"></script>
-
-
-
     </head>
     <body>
         <h1>Lifespans</h1>
-        <script type="text/javascript">
-            var width = window.innerWidth - 10;
-            var height = 500;
-            var barHeight = 30;
-            var barPadding = 2;
-            var oldestDate = -150;
-            var currentYear = 2016; 
 
-            var dataset = [ ["Lincoln",5,30],["Washington", 23,56],["Jefferson", 60, 92],["Franklin", 12,56], ["Obama", 1950, currentYear] ];
+        <form action="index.html" method="post">
+          <label>Who was alive in: <input type="text" id="year" /></label><br />
+          <input type="button" value="Submit" onclick="buildCanvas()" />
+        </form>
 
-            var svg = d3.select("body")
-                .append("svg")
-                .attr("width", width-20)
-                .attr("height", height)
-            svg.append("rect")
-                .attr("width", "100%")
-                .attr("height", "100%")
-                .attr("fill", "blue");
-
-
-            /////////// axis   //////////
-
-            var xScale = d3.scale.linear()
-                .domain([oldestDate, currentYear])
-                .range([10, width -50]);
-
-            var yScale = d3.scale.linear()
-                .domain([0, d3.max(dataset, function(d) { return d[2]; })])
-                .range([0, height]);
-
-            var xAxis = d3.svg.axis()
-                  .scale(xScale)
-                  .orient("bottom")
-                  .ticks(50);  //Set rough # of ticks
-
-            svg.append("g")
-                .attr("class", "axis")
-                .attr("transform", "translate(10)")
-                .call(xAxis);
-
-
-            svg.selectAll("rect")
-               .data(dataset)
-               .enter()
-               .append("rect")
-               .attr("y", function (d, i) {
-                    return 25+ i * (barHeight + barPadding);
-               })
-               .attr("x", function(d) {
-                    return d[1];
-                })
-               .attr("height", barHeight)
-               .attr("width", function(d) {
-                    return (d[2] - d[1]) * 5;
-               })
-               .attr("fill", "burlywood");
-
-            svg.selectAll("rect")
-                .append("text")
-                .text(function(d) {
-                    console.log("here")
-                    return d[0];
-                })
-               .attr("y", function (d, i) {
-                    return 5+ i * (barHeight + barPadding);
-               })
-               .attr("x", function(d) {
-                    return xScale(d[2]);
-                })
-               .attr("fill", "black");
-
-
-
-
-        </script>
+        <script type="text/javascript" src="dataset.js"></script>
+        <script type="text/javascript" src="d3canvas.js"></script>
     </body>
 </html>
