--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Lifespans</h1>
 
         <form action="index.html" method="post">
-          <label>Who was alive in: <input type="text" id="year" /></label><br />
+          <label>Tell me who was alive in: <input type="text" id="year" /></label><br />
           <input type="button" value="Submit" onclick="buildCanvas()" />
         </form>
 
